# tooharness

./: DEVELOPMENT_LOG.md  PROJECT_PLAN.md  main.py  pyproject.toml
backend/: main.py  pyproject.toml
backend/app/: config.py  db.py
backend/app/routers/: agent.py  diary.py  transactions.py
frontend/src/: App.css  App.tsx  api.ts  index.css
myharness/agentcore/: agentcore.json  aws-targets.json
myharness/agentcore/.cli/: deployed-state.json
myharness/agentcore/cdk/: package-lock.json
myharness/app/TooHarness/: harness.json  system-prompt.md
myharness/app/TooMcp/: README.md  main.py  pyproject.toml
