[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TooMcp"
version = "0.1.0"
description = "AgentCore MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp >= 1.19.0",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
